Avoiding instantiating Boolean objects